feat(phase1.4): minor skills refactor